Convert some erbfiles into HAML files

--- a/app/views/shared/_related.html.haml
+++ b/app/views/shared/_related.html.haml
@@ -1,31 +1,12 @@
-%h4 Related StackOverflow Questions
-
-%ul.stackoverflow
-  %li
-    =link_to "About Git's merge and rebase"
-    %span
-      <strong>5</strong> votes <em>/</em> <strong>3</strong> Answers
-  %li
-    =link_to "git rebase vs git merge"
-    %span
-      <strong>81</strong> votes <em>/</em> <strong>5</strong> Answers
-  %li
-    =link_to "How to do a rebase with git gui?"
-    %span
-      <strong>5</strong> votes <em>/</em> <strong>3</strong> Answers
-  %li
-    =link_to "recovering from git rebase"
-    %span
-      <strong>27</strong> votes <em>/</em> <strong>15</strong> Answers
-  %li
-    =link_to "git pull VS git fetch git rebase"
-    %span
-      <strong>15</strong> votes <em>/</em> <strong>3</strong> Answers
-  %li
-    =link_to "Undoing a git rebase"
-    %span
-      <strong>160</strong> votes <em>/</em> <strong>7</strong> Answers
-  %li
-    =link_to "How to know if there is a git rebase in progress?"
-    %span
-      <strong>16</strong> votes <em>/</em> <strong>7</strong> Answers
+- if @related && @related.size > 0
+  %h4 Related Material
+  %ul.related-material
+    - @related.each do |rel|
+      %li{:class => rel.content_type}
+        %strong=link_to rel.name, rel.content_url
+        - if rel.content_type == "reference"
+          in #{link_to "Reference", "/docs"}
+        - elsif rel.content_type == "book"
+          in #{link_to "Books", "/book/en"}
+        - elsif rel.content_type == "video"
+          in #{link_to "Videos", "/videos"}
