mention how to subscribe to the git mailing list

--- a/app/views/community/index.html.haml
+++ b/app/views/community/index.html.haml
@@ -11,10 +11,10 @@
   %h2 Mailing List
 
   %p
-    Questions or comments for the Git community can be sent to the mailing list by using the email address <a href="mailto:git@vger.kernel.org">git@vger.kernel.org</a>. <strong>Bug reports should be sent to this mailing list.</strong>
-
+    Questions or comments for the Git community can be sent to the mailing list by using the email address <a href="mailto:git@vger.kernel.org">git@vger.kernel.org</a>. <strong>Bug reports should be sent to this mailing list.</strong> 
+    
   %p
-    The <a href="http://dir.gmane.org/gmane.comp.version-control.git">archive of the Git mailing list</a> can be found on Gmane. 
+    The <a href="http://dir.gmane.org/gmane.comp.version-control.git">archive</a> can be found on Gmane.  Click <a href="mailto:majordomo@vger.kernel.org?body=subscribe git">here</a> to subscribe.  
 
   %p
     There is also <a href="https://groups.google.com/forum/?fromgroups#!forum/git-users">Git user mailing list</a> on Google Groups which is a nice place for beginners to ask about anything.
