More Asciidoc cleanup
- dry up a few places where blocks are processed in a nearly identical
  way
- section names can begin with a '"' character
- render oblock and quote content inside the appropriate container div
- literals shouldn't have their text formatted (eg. strong/em)
- list items should continue through the end of both oblock and listings

--- a/templates/section_quote.html.erb
+++ b/templates/section_quote.html.erb
@@ -1,7 +1,5 @@
 <div class="quoteblock">
   <div class="content">
-    <div class="paragraph">
-      <p><%= content %></p>
-    </div>
+    <%= content %>
   </div>
 </div>
