Added Git in the Trenches to the books section

--- a/app/views/doc/ext.html.erb
+++ b/app/views/doc/ext.html.erb
@@ -109,6 +109,14 @@
             By Travis Swicegood
           </p>
         </li>
+        <li>
+          <a href="http://cbx33.github.com/gitt/"><img src="/images/books/git-in-the-trenches.jpg" /></a>
+          <h4><a href="http://cbx33.github.com/gitt/">Git in the Trenches</a></h4>
+          <p class='description'>
+            By Peter Savage
+            <img class="creative-commons" src="/images/creative-commons.png" />
+          </p>
+        </li>
       </ul>
     </div>
   </div>
