Force monospace fonts, fixes #115
The non-Adelle fallback for Windows Chrome was overly aggressive and
used Georgia everywhere.

--- a/app/assets/stylesheets/man-pages.css.scss
+++ b/app/assets/stylesheets/man-pages.css.scss
@@ -2,14 +2,14 @@
   p {
     em {
       color: $fixed-width-font-color;
-      font-family: $fixed-width-font-family;
+      font-family: $fixed-width-font-family !important;
       font-weight: bold;
       font-style: normal;
     }
     tt {
       background-color: #eee0b5;
       padding: 2px;
-      font-family: $fixed-width-font-family;
+      font-family: $fixed-width-font-family !important;
     }
   }
   p.nutshell {
@@ -21,14 +21,14 @@
     .content pre tt {
       background-color: #eee0b5;
       padding: 2px;
-      font-family: $fixed-width-font-family;
+      font-family: $fixed-width-font-family !important;
       display: block;
     }
     margin-bottom: 15px;
   }
 
   dt.hdlist1 {
-    font-family: $fixed-width-font-family;
+    font-family: $fixed-width-font-family !important;
   }
 
   // Man pages
@@ -39,7 +39,7 @@
       margin-bottom: 1em;
       white-space: pre;
       color: $fixed-width-font-color;
-      font-family: $fixed-width-font-family;
+      font-family: $fixed-width-font-family !important;
       line-height: $fixed-width-line-height;
       white-space: pre-wrap;       /* css-3 */
       white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
