--- a/app/assets/stylesheets/typography.css.scss
+++ b/app/assets/stylesheets/typography.css.scss
@@ -218,7 +218,7 @@ code {
   background-color: #fff;
   border: solid 1px #efeee6;
   color: $orange;
-  font-family: $fixed-width-font-family;
+  font-family: $fixed-width-font-family !important;
   line-height: $fixed-width-line-height;
 }
 
@@ -309,5 +309,5 @@ div.more {
 }
 
 .fixed {
-  font-family: $fixed-width-font-family;
+  font-family: $fixed-width-font-family !important;
 }
