new git for windows page

--- a/app/assets/stylesheets/errors.css.scss
+++ b/app/assets/stylesheets/errors.css.scss
@@ -13,7 +13,8 @@ body {
 }
 
 // windows chrome makes a mess of Adelle web font
-.windows.chrome body * {
+.windows.chrome body *,
+.windows.ie8 body * {
   font-family: $base-font-family-fallback ! important;
 }
 
