The `<tt>` tag is obsolete, according to https://developer.mozilla.org/en/HTML/Element/tt

--- a/templates/section_listing.html.erb
+++ b/templates/section_listing.html.erb
@@ -1,5 +1,5 @@
 <div class="listingblock">
   <div class="content">
-    <pre><tt><%= content %></tt></pre>
+    <pre><%= content %></pre>
   </div>
 </div>
