--- a/app/views/downloads/download_linux.html.erb
+++ b/app/views/downloads/download_linux.html.erb
@@ -14,6 +14,9 @@
   <h3>Gentoo</h3>
   <code>$ emerge --ask --verbose dev-vcs/git</code>
 
+  <h3>Arch Linux</h3>
+  <code>$ pacman -S git</code>
+
   <h3>FreeBSD</h3>
   <code>$ cd /usr/ports/devel/git<br>$ make install</code>
 
