Updated  credits,  Heroku also included
Updated credit, heroku link added

--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -1,6 +1,6 @@
 %footer
   %div.site-source
-    This <a href="https://github.com/github/gitscm-next/blob/master/README.md#license">open sourced</a> site is <a href="https://github.com/github/gitscm-next">hosted on GitHub.</a><br>
+    This <a href="https://github.com/github/gitscm-next/blob/master/README.md#license">open sourced</a> Code is <a href="https://github.com/github/gitscm-next">hosted on GitHub</a> and the site is <a href="https://heroku.com">hosted on Heroku.</a><br>
     Patches, suggestions, and comments are welcome.
 
   %div.sfc-member
