Added GitHub for Windows.

--- a/app/views/downloads/guis/index.html.haml
+++ b/app/views/downloads/guis/index.html.haml
@@ -23,6 +23,12 @@
           %p.description
             <strong>Platforms:</strong> Mac</br>
             <strong>Price:</strong> Free
+        %li.windows
+          =link_to(image_tag('guis/github-for-windows.png'), "http://windows.github.com/")
+          %h4= link_to "GitHub for Windows", "http://windows.github.com/"
+          %p.description
+            <strong>Platforms:</strong> Windows</br>
+            <strong>Price:</strong> Free
         %li.mac
           =link_to(image_tag('guis/gitx.png'), "http://gitx.frim.nl/")
           %h4= link_to "GitX", "http://gitx.frim.nl/"
