Show OS count when filtering, fixes #70

--- a/app/views/downloads/guis/index.html.haml
+++ b/app/views/downloads/guis/index.html.haml
@@ -13,6 +13,10 @@
 
   %p
     =link_to "Only show GUIs for my OS (Linux)", "#", {:class => "subtle-button", :id => "gui-os-filter", 'data-os' => 'linux'}
+    %span#os-filter-count
+      %strong 0
+      %span.os Linux 
+      GUIs are highlighted below ↓
 
   %div.two-column
     %div.column-left
