Add git-clean to menus under Administration category

--- a/app/views/doc/rebase.html.haml
+++ b/app/views/doc/rebase.html.haml
@@ -86,6 +86,7 @@
       %div.column-right
         %h3 Administration
         %ul.unstyled
+          %li= link_to "clean"
           %li= link_to "gc"
           %li= link_to "fsck"
           %li= link_to "reflog"
