--- a/app/views/shared/ref/_admin.html.erb
+++ b/app/views/shared/ref/_admin.html.erb
@@ -1,5 +1,6 @@
 <h3 class='admin'>Administration</h3>
 <ul class='unstyled'>
+  <li><%= man('git-clean') %></li>
   <li><%= man('git-gc') %></li>
   <li><%= man('git-fsck') %></li>
   <li><%= man('git-reflog') %></li>
