book: url-encode section slugs
The Spanish version of the book contains a section title
that ends in "?", which needs to be URL-encoded.

--- a/app/views/doc/book.html.erb
+++ b/app/views/doc/book.html.erb
@@ -22,7 +22,7 @@
           <% if !section.title.empty? %>
             <li>
               <%= chapter.number %>.<%= section.number %> 
-              <a href="/book/<%= @book.code %>/<%= section.slug %>"><%=raw section.title %></a>
+              <a href="/book/<%= @book.code %>/<%= u(section.slug) %>"><%=raw section.title %></a>
             </li>
           <% end %>
         <% end %>
