Update tarball download links to the official URL
As discussed on the mailing list, Junio's release process is more than
just running a git archive command or equivalent. The official tarballs
contain a pregenerated configure script and adds a correct version file.

The link has been updated to point to the official URL for downloading
the git tarballs, as specified by the git [ANNOUNCE] messages on the
mailing list.

Signed-off-by: Dan Johnson <ComputerDruid@gmail.com>

--- a/app/views/shared/_monitor.html.haml
+++ b/app/views/shared/_monitor.html.haml
@@ -5,4 +5,4 @@
   =link_to "Release Notes", latest_relnote_url
   %span.release-date= latest_release_date
 
-  =link_to "Download Source Code", "https://github.com/git/git/tags", {:class => 'button', :id => 'download-link'}
+  =link_to "Download Source Code", "http://code.google.com/p/git-core/downloads/list", {:class => 'button', :id => 'download-link'}
