add git-grep to the reference page - #170

--- a/app/views/shared/ref/_debugging.html.erb
+++ b/app/views/shared/ref/_debugging.html.erb
@@ -2,4 +2,5 @@
 <ul class='unstyled'>
   <li><%= man('git-bisect') %></li>
   <li><%= man('git-blame') %></li>
+  <li><%= man('git-grep') %></li>
 </ul>
