Fix anchor href rendering for Section anchors

--- a/templates/section.html.erb
+++ b/templates/section.html.erb
@@ -1,11 +1,8 @@
-<% if !anchor.nil? %>
-  <a name="<%= anchor %>">
-<% end %>
 <div class="sect<%= level %>">
-  <h<%= level + 1 %> id="<%= section_id %>"><%= name %></h<%= level + 1 %>>
   <% if !anchor.nil? %>
-    </a>
+    <a name='<%= anchor %>'></a>
   <% end %>
+  <h<%= level + 1 %> id="<%= section_id %>"><%= name %></h<%= level + 1 %>>
   <% if level == 1 %>
     <div class="sectionbody"><%= content %></div>
   <% else %>
