more typography tweaks for windows chrome
Fixes #128

--- a/app/assets/stylesheets/errors.css.scss
+++ b/app/assets/stylesheets/errors.css.scss
@@ -8,12 +8,13 @@ body {
   font-size: $base-font-size;
   line-height: $base-line-height;
   font-family: $base-font-family;
-  color: $font-color; 
+  color: $font-color;
   background: #f0efe7 url(/images/bg/body.jpg);
 }
 
 // windows chrome makes a mess of Adelle web font
-.windows.chrome body * {
+.windows.chrome body,
+.windows.ie8 body {
   font-family: $base-font-family-fallback ! important;
 }
 
