--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -19,6 +19,10 @@ input, textarea {
   font-size: 14px;
   outline: none;
 }
+.windows.chrome input, .windows.chrome textarea,
+.windows.ie8 input, .windows.chrome textarea {
+  font-family: $base-font-family-fallback ! important;
+}
 
 form#search {
   position: absolute;
