--- a/app/assets/stylesheets/reference.css.scss
+++ b/app/assets/stylesheets/reference.css.scss
@@ -72,7 +72,7 @@ h3.plumbing {
   background-color: rgba(223, 221, 213, .33);
   @include border-radius(3px);
   padding: 8px 12px 6px 12px;
-  margin-bottom: 10px; 
+  margin-bottom: 10px;
   font-size: 13px;
   font-weight: bold;
   .light {
@@ -81,7 +81,7 @@ h3.plumbing {
   a {
     font-weight: bold;
     position: relative;
-    top: -5px;   
+    top: -5px;
     &#reference-versions-trigger {
       float: left;
       margin-right: 6px;
@@ -116,13 +116,18 @@ h3.plumbing {
     input {
       font-size: 11px;
       border: solid 1px #e2e0d8;
-      background-color: #f0efe8; 
+      background-color: #f0efe8;
       color: $font-color;
       width: 70px;
       @include border-radius(1px);
       padding: 1px 3px;
     }
   }
+}
+
+.windows.chrome #previous-versions-dropdown,
+.windows.ie8 #previous-versions-dropdown {
+  width: 370px;
 }
 
 #topics-dropdown {
@@ -211,7 +216,7 @@ ol.reference-previous-versions {
         font-style: normal;
       }
       &.more {
-        border-bottom: none; 
+        border-bottom: none;
       }
     }
     &.no-change {
