Replace original GitX with GitX (L)
Fixes #176

--- a/app/views/downloads/guis/index.html.haml
+++ b/app/views/downloads/guis/index.html.haml
@@ -34,8 +34,8 @@
             <strong>Platforms:</strong> Windows</br>
             <strong>Price:</strong> Free
         %li.mac
-          =link_to(image_tag('guis/gitx.png'), "http://gitx.frim.nl/")
-          %h4= link_to "GitX", "http://gitx.frim.nl/"
+          =link_to(image_tag('guis/gitx.png'), "http://gitx.laullon.com/")
+          %h4= link_to "GitX (L)", "http://gitx.laullon.com/"
           %p.description
             <strong>Platforms:</strong> Mac</br>
             <strong>Price:</strong> Free
