Fixed broken link to Pro Git book on download pages

--- a/app/views/downloads/downloading.html.haml
+++ b/app/views/downloads/downloading.html.haml
@@ -26,7 +26,7 @@
 
   %ul#download-next-steps
     %li
-      <a href="/documentation/book">
+      <a href="/book">
       <img src="/images/icons/nav-read-book.png" />
       <h3>Read the Book</h3>
       <p>Dive into the Pro Git book and learn at your own pace.</p>
