monitor: show installer version in the download link

--- a/app/views/shared/_monitor.html.haml
+++ b/app/views/shared/_monitor.html.haml
@@ -4,5 +4,6 @@
 
   =link_to "Release Notes", latest_relnote_url
   %span.release-date= latest_release_date
+  %span#installer-version{"data-mac" => latest_mac_installer, "data-win" => latest_win_installer}
 
   =link_to "Download Source Code", "http://code.google.com/p/git-core/downloads/list", {:class => 'button', :id => 'download-link'}
