added GitSurvey2012 banner

--- a/app/views/layouts/layout.html.haml
+++ b/app/views/layouts/layout.html.haml
@@ -5,18 +5,23 @@
       %title= @page_title
     - else
       %title Git
-    %meta{:charset => "utf-8"}    
+    %meta{:charset => "utf-8"}
     %meta{:content => "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible"}
     %link{:rel => "shortcut icon", "href" => "/favicon.ico", :type => "image/x-icon"}
-    = stylesheet_link_tag "git-scm.css" 
+    = stylesheet_link_tag "git-scm.css"
     = javascript_include_tag "modernizr.js", "modernizr-tests.js"
     /[if (gte IE 6)&(lte IE 8)]
       %script{:src => "/javascripts/selectivizr-min.js", :type => "text/javascript"}
     = javascript_include_tag "http://use.typekit.com/jsq2fql.js"
     :javascript
       try{Typekit.load();}catch(e){}
-    
+
   %body{:id => @section}
+    %div#promo
+      %div.inner
+        %h5 The Git User's Survey 2012 is now up! <em>26 September &mdash; 15 October 2012</em>
+        %p
+          Please devote a few minutes of your time to <a href="https://www.survs.com/survey/Z4VRFUT2WY">fill out the simple questionnaire</a>. It'll help the Git community understand your needs, what you like about Git (and what you don't), and help us improve it in general. The results will be published at <a href="http://git.wiki.kernel.org/index.php/GitSurvey2012">GitSurvey2012</a>.
     %div.inner
       = partial 'shared/header'
 
@@ -32,7 +37,7 @@
           <img class="illustration" src="images/branching-illustration.png" />
 
       %div#conent-wrapper
-        %div.inner 
+        %div.inner
           =yield
           = partial 'shared/footer'
 
@@ -45,14 +50,14 @@
                 %li= link_to "About", "/about", {:class => (@section == 'about') ? 'active' : ''}
                 %li
                   =link_to "Documentation", "/doc", {:class => (@section == 'documentation') ? 'active' : ''}
-                  %ul{:class => (@section == 'documentation') ? 'expanded' : ''} 
+                  %ul{:class => (@section == 'documentation') ? 'expanded' : ''}
                     %li= link_to "Reference", "/docs", {:class => (@subsection == 'reference') ? 'active' : ''}
                     %li= link_to "Book", "/book", {:class => (@subsection == 'book') ? 'active' : ''}
                     %li= link_to "Videos", "/videos", {:class => (@subsection == 'videos') ? 'active' : ''}
                     %li= link_to "External Links", "/doc/ext", {:class => (@subsection == 'external-links') ? 'active' : ''}
                 %li
                   = link_to "Downloads", "/downloads", {:class => (@section == 'downloads') ? 'active' : ''}
-                  %ul{:class => (@section == 'downloads') ? 'expanded' : ''} 
+                  %ul{:class => (@section == 'downloads') ? 'expanded' : ''}
                     %li= link_to "GUI Clients", "/downloads/guis", {:class => (@subsection == 'guis') ? 'active' : ''}
                     %li= link_to "Logos", "/downloads/logos", {:class => (@subsection == 'logos') ? 'active' : ''}
                 %li= link_to "Community", "/community", {:class => (@section == 'community') ? 'active' : ''}
