--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -35,6 +35,31 @@ aside {
   float: right;
 }
 
+#promo {
+  background-color: #433b34;
+  color: #f0f0e8;
+  padding: 8px 0 2px 0;
+  h5 {
+    color: #fff;
+    font-size: 16px;
+    font-weight: bold;
+    line-height: 1.3;
+    margin-bottom: 3px;
+    em {
+      color: #f0f0e8;
+      font-size: 12px;
+      font-weight: normal;
+      padding-left: 10px;
+    }
+  }
+  p {
+    line-height: 1.3;
+  }
+  a {
+    color: $orange;
+  }
+}
+
 #main {
   background-color: #fcfcfa;
   border: solid 1px #e2e0d8;
