Adding image and text link to try.github.com

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -35,31 +35,6 @@ aside {
   float: right;
 }
 
-#promo {
-  background-color: #433b34;
-  color: #f0f0e8;
-  padding: 8px 0 2px 0;
-  h5 {
-    color: #fff;
-    font-size: 16px;
-    font-weight: bold;
-    line-height: 1.3;
-    margin-bottom: 3px;
-    em {
-      color: #f0f0e8;
-      font-size: 12px;
-      font-weight: normal;
-      padding-left: 10px;
-    }
-  }
-  p {
-    line-height: 1.3;
-  }
-  a {
-    color: $orange;
-  }
-}
-
 #main {
   background-color: #fcfcfa;
   border: solid 1px #e2e0d8;
@@ -97,12 +72,19 @@ aside {
   margin-bottom: 2em;
   background: #f4f4f1 url(/images/bg/isometric-grid.png) 0 0 repeat-x;
   .inner {
-    padding-top: 36px;
+    padding-top: 20px;
     p {
       width: 558px;
       font-size: 18px;
       line-height: $base-line-height * 1.2;
       margin-bottom: 1.2em;
+    }
+    .promo {
+      background: #d8d7cf;
+      display: inline-block;
+      margin-top: -.5em;
+      padding: 4px 8px 4px 4px;
+      width: auto;
     }
     img.illustration {
       position: absolute;
