added static template for functions overview page

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -147,6 +147,14 @@ aside nav ul {
       &.active, &:hover {
         color: $orange;
       }
+      span {
+        padding-right: 3px;
+      }
+      em {
+        color: #7c766f;
+        font-style: normal;
+        font-weight: normal ! important;
+      }
     }
     ul {
       display: none;
@@ -259,6 +267,24 @@ a.dropdown-trigger {
   }
   &.right {
     @include border-top-right-radius(0);
+  }
+}
+
+.three-column {
+  @include clearfix;
+  .column-left {
+    width: 31%;
+    float: left;
+    padding-right: 3%
+  }
+  .column-middle {
+    width: 31%;
+    float: left;
+    padding-right: 3%
+  }
+  .column-right {
+    width: 31%;
+    float: left;
   }
 }
 
