--- a/app/assets/stylesheets/libgit2.css.scss
+++ b/app/assets/stylesheets/libgit2.css.scss
@@ -4,6 +4,9 @@
 @import "variables.css.scss";
 @import "layout.css.scss";
 @import "typography.css.scss";
+@import "sidebar.css.scss";
+@import "forms.css.scss";
+@import "lists.css.scss";
 
 body {
   font-size: $base-font-size;
@@ -66,7 +69,7 @@ header {
   }
 }
 
-#main {
+#front-main {
   float: left;
   width: 600px;
   background-color: transparent;
@@ -218,4 +221,58 @@ ul.additional-languages {
       margin-top: 12px;
     }
   }
+}
+
+#library-versions {
+  @include clearfix;
+  position: relative;
+  background-color: #ebe9e1;
+  background-color: rgba(223, 221, 213, .33);
+  @include border-radius(3px);
+  padding: 8px 12px 6px 12px;
+  margin-bottom: 10px;
+  font-size: 13px;
+  a {
+    font-weight: bold;
+    float: right;
+  }
+  .version-selection {
+    float: left;
+    padding-right: 20px;
+  }
+  ul.legend {
+    @extend .unstyled;
+    display: inline;
+    li {
+      float: left;
+      padding-left: 10px;
+      padding-right: 20px;
+      &.new {
+        background: url(/images/icons/green-square@2x.png) 0 50% no-repeat;
+        background-size: 6px 6px;
+      }
+      &.changed {
+        background: url(/images/icons/orange-square@2x.png) 0 50% no-repeat;
+        background-size: 6px 6px;
+      }
+      &.removed {
+        background: url(/images/icons/red-square@2x.png) 0 50% no-repeat;
+        background-size: 6px 6px;
+        color: rgba(#c00, 0.3);
+      }
+
+    }
+  }
+}
+
+.library-functions .column-left,
+.library-functions .column-middle,
+.library-functions .column-right {
+  padding-left: 10px;
+}
+.library-functions .column-left {
+  padding-right: 1%
+}
+.library-functions .column-middle {
+  padding-right: 1%
 }
