--- a/app/assets/stylesheets/lists.css.scss
+++ b/app/assets/stylesheets/lists.css.scss
@@ -6,7 +6,7 @@
   }
   .description {
     font-size: 12px;
-    line-height: $base-line-height * 0.7; 
+    line-height: $base-line-height * 0.7;
   }
 }
 
@@ -140,6 +140,35 @@ ul.stackoverflow {
     }
     em {
       color: lighten($light-font-color, 20%);
+    }
+  }
+}
+
+.library-functions ul {
+  @extend .unstyled;
+  position: relative;
+  left: -8px;
+  font-size: 13px;
+  li {
+    line-height: 20px;
+  }
+  a {
+    padding-left: 10px;
+    &.important {
+      font-weight: bold;
+    }
+    &.new {
+      background: url(/images/icons/green-square@2x.png) 0 50% no-repeat;
+      background-size: 6px 6px;
+    }
+    &.changed {
+      background: url(/images/icons/orange-square@2x.png) 0 50% no-repeat;
+      background-size: 6px 6px;
+    }
+    &.removed {
+      background: url(/images/icons/red-square@2x.png) 0 50% no-repeat;
+      background-size: 6px 6px;
+      color: rgba(#c00, 0.3);
     }
   }
 }
