added static template for function group page

--- a/app/assets/stylesheets/libgit2.css.scss
+++ b/app/assets/stylesheets/libgit2.css.scss
@@ -276,3 +276,34 @@ ul.additional-languages {
 .library-functions .column-middle {
   padding-right: 1%
 }
+
+ul.library-functions {
+  @extend .unstyled;
+  li {
+    margin-bottom: 20px;
+  }
+  a {
+    font-size: 17px;
+    padding-left: 10px;
+    &.important {
+      font-weight: bold;
+    }
+    &.new {
+      background: url(/images/icons/green-square@2x.png) 0 50% no-repeat;
+      background-size: 6px 6px;
+    }
+    &.changed {
+      background: url(/images/icons/orange-square@2x.png) 0 50% no-repeat;
+      background-size: 6px 6px;
+    }
+    &.removed {
+      background: url(/images/icons/red-square@2x.png) 0 50% no-repeat;
+      background-size: 6px 6px;
+      color: rgba(#c00, 0.3);
+    }
+  }
+  p {
+    font-size: 14px;
+    padding-left: 10px;
+  }
+}
