added static template for function page

--- a/app/assets/stylesheets/libgit2.css.scss
+++ b/app/assets/stylesheets/libgit2.css.scss
@@ -76,6 +76,9 @@ header {
   border: none;
   @include border-radius(0);
   padding: 0;
+  p {
+    font-size: 18px;
+  }
 }
 
 #sidebar {
@@ -86,7 +89,6 @@ header {
 }
 
 p {
-  font-size: 18px;
   color: lighten(#4e443c, 10%);
   margin-bottom: 30px;
 }
@@ -306,4 +308,26 @@ ul.library-functions {
     font-size: 14px;
     padding-left: 10px;
   }
+}
+
+.signature {
+  background-color: #e8e7dd;
+  padding: 1em;
+  margin-bottom: 1em;
+  white-space: pre;
+  color: $fixed-width-font-color;
+  font-family: $fixed-width-font-family !important;
+  line-height: $fixed-width-line-height;
+  white-space: pre-wrap;       /* css-3 */
+  white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+  white-space: -pre-wrap;      /* Opera 4-6 */
+  white-space: -o-pre-wrap;    /* Opera 7 */
+  word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
+
+.signature + .small {
+  display: block;
+  color: $light-font-color;
+  font-size: 12px;
+  margin-top: -1em;
 }
