--- a/app/assets/stylesheets/lists.css.scss
+++ b/app/assets/stylesheets/lists.css.scss
@@ -173,6 +173,48 @@ ul.stackoverflow {
   }
 }
 
+.library-versions {
+  @extend .unstyled;
+  position: relative;
+  left: -8px;
+  a {
+    padding-left: 10px;
+    &.important {
+      font-weight: bold;
+    }
+    &.new {
+      background: url(/images/icons/green-square@2x.png) 0 50% no-repeat;
+      background-size: 6px 6px;
+    }
+    &.changed {
+      background: url(/images/icons/orange-square@2x.png) 0 50% no-repeat;
+      background-size: 6px 6px;
+    }
+    &.removed {
+      background: url(/images/icons/red-square@2x.png) 0 50% no-repeat;
+      background-size: 6px 6px;
+      color: rgba(#c00, 0.3);
+    }
+  }
+}
+
+table.arguments {
+  td {
+    padding-right: 20px;
+    &.parameter {
+      color: $fixed-width-font-color;
+      font-family: $fixed-width-font-family !important;
+      font-weight: bold;
+      line-height: $fixed-width-line-height;
+    }
+    &.type {
+      color: $fixed-width-font-color;
+      font-family: $fixed-width-font-family !important;
+      line-height: $fixed-width-line-height;
+    }
+  }
+}
+
 table.binaries {
   td {
     padding: 8px 20px 6px 0;
