fixed font size issue on function group page

--- a/app/assets/stylesheets/libgit2.css.scss
+++ b/app/assets/stylesheets/libgit2.css.scss
@@ -279,7 +279,7 @@ ul.additional-languages {
   padding-right: 1%
 }
 
-ul.library-functions {
+ul.library-group-functions {
   @extend .unstyled;
   li {
     margin-bottom: 20px;
