static template for usage guide

--- a/app/assets/stylesheets/libgit2.css.scss
+++ b/app/assets/stylesheets/libgit2.css.scss
@@ -7,6 +7,7 @@
 @import "sidebar.css.scss";
 @import "forms.css.scss";
 @import "lists.css.scss";
+@import "syntax-hl.css.scss";
 
 body {
   font-size: $base-font-size;
@@ -330,4 +331,14 @@ ul.library-group-functions {
   color: $light-font-color;
   font-size: 12px;
   margin-top: -1em;
+}
+
+#usage-guide {
+  code {
+    display: inline;
+    background-color: #eee0b5;
+    color: $font-color;
+    padding: 2px;
+    font-family: $fixed-width-font-family !important;
+  }
 }
