--- a/app/views/layouts/library.html.haml
+++ b/app/views/layouts/library.html.haml
@@ -31,6 +31,8 @@
             %nav
               %ul
                 %li
+                  = link_to "Usage Guide", "#", {:class => (@section == 'guide') ? 'active' : ''}
+                %li
                   =link_to "Functions", "#", {:class => (@section == 'functions') ? 'active' : ''}
                   %ul{:class => (@section == 'functions') ? 'expanded' : ''}
                     %li= function_nav_link "attr", 5
@@ -66,11 +68,11 @@
                 %li
                   = link_to "Examples", "#", {:class => (@section == 'examples') ? 'active' : ''}
 
-            - if content_for(:sidebar)
-              %hr.sidebar
-              = yield :sidebar
-
           %div#content
             ~yield
 
         = partial 'shared/footer'
+        = javascript_include_tag "sh_main.min.js", "sh_c.min.js", "sh_ruby.min.js"
+
+        :javascript
+          sh_highlightDocument()
