Initial pass at the main API view

--- a/app/views/layouts/library.html.haml
+++ b/app/views/layouts/library.html.haml
@@ -35,32 +35,8 @@
                 %li
                   =link_to "Functions", "#", {:class => (@section == 'functions') ? 'active' : ''}
                   %ul{:class => (@section == 'functions') ? 'expanded' : ''}
-                    %li= function_nav_link "attr", 5
-                    %li= function_nav_link "blob", 9
-                    %li= function_nav_link "branch", 6
-                    %li= function_nav_link "checkout", 3
-                    %li= function_nav_link "clone", 2
-                    %li= function_nav_link "commit", 18
-                    %li= function_nav_link "config", 23
-                    %li= function_nav_link "diff",20
-                    %li= function_nav_link "giterr", 4
-                    %li= function_nav_link "ignore", 3
-                    %li= function_nav_link "index", 21
-                    %li= function_nav_link "indexer",10
-                    %li= function_nav_link "attr", 5
-                    %li= function_nav_link "branch", 6
-                    %li= function_nav_link "checkout", 3
-                    %li= function_nav_link "clone", 2
-                    %li= function_nav_link "commit", 18
-                    %li= function_nav_link "config", 23
-                    %li= function_nav_link "diff",20
-                    %li= function_nav_link "giterr", 4
-                    %li= function_nav_link "ignore", 3
-                    %li= function_nav_link "index", 21
-                    %li= function_nav_link "indexer",10
-                    %li= function_nav_link "attr", 5
-                    %li= function_nav_link "branch", 6
-                    %li= function_nav_link "checkout", 3
+                    - each_group do |group|
+                      %li= function_nav_link group.name, group.functions.length
                 %li
                   = link_to "Types", "#", {:class => (@section == 'types') ? 'active' : ''}
                 %li
