Added the Function route!

--- a/app/views/layouts/library.html.haml
+++ b/app/views/layouts/library.html.haml
@@ -35,7 +35,7 @@
                 %li
                   =link_to "Functions", "#", {:class => (@section == 'functions') ? 'active' : ''}
                   %ul{:class => (@section == 'functions') ? 'expanded' : ''}
-                    - each_group do |group|
+                    - all_groups.each do |group|
                       %li= function_nav_link group.name, group.functions.length
                 %li
                   = link_to "Types", "#", {:class => (@section == 'types') ? 'active' : ''}
