Added Group view

--- a/app/views/layouts/library.html.haml
+++ b/app/views/layouts/library.html.haml
@@ -33,7 +33,7 @@
                 %li
                   = link_to "Usage Guide", "#", {:class => (@section == 'guide') ? 'active' : ''}
                 %li
-                  =link_to "Functions", "#", {:class => (@section == 'functions') ? 'active' : ''}
+                  =link_to "Functions", api_route, {:class => (@section == 'functions') ? 'active' : ''}
                   %ul{:class => (@section == 'functions') ? 'expanded' : ''}
                     - all_groups.each do |group|
                       %li= function_nav_link group.name, group.functions.length
