changed to 2-column api layout w/ view toggle

--- a/app/assets/stylesheets/libgit2.css.scss
+++ b/app/assets/stylesheets/libgit2.css.scss
@@ -269,15 +269,20 @@ ul.additional-languages {
 }
 
 .library-functions .column-left,
-.library-functions .column-middle,
 .library-functions .column-right {
-  padding-left: 10px;
+  width: 48%;
+  h3 .toggle {
+    font-weight: normal;
+    font-size: 12px;
+    padding-left: 6px;
+    color: $light-font-color;
+  }
 }
 .library-functions .column-left {
-  padding-right: 1%
+  float: left;
 }
-.library-functions .column-middle {
-  padding-right: 1%
+.library-functions .column-right {
+  float: right;
 }
 
 ul.library-group-functions {
