--- a/app/assets/stylesheets/lists.css.scss
+++ b/app/assets/stylesheets/lists.css.scss
@@ -148,7 +148,6 @@ ul.stackoverflow {
   @extend .unstyled;
   position: relative;
   left: -8px;
-  font-size: 13px;
   li {
     line-height: 20px;
   }
@@ -156,6 +155,9 @@ ul.stackoverflow {
     padding-left: 10px;
     &.important {
       font-weight: bold;
+    }
+    &:not(.important) {
+      display: none;
     }
     &.new {
       background: url(/images/icons/green-square@2x.png) 0 50% no-repeat;
