Rip out MongoMapper with custom Mongo code

--- a/app/views/layouts/library.html.haml
+++ b/app/views/layouts/library.html.haml
@@ -36,7 +36,7 @@
                   =link_to "Functions", api_route, {:class => (@section == 'functions') ? 'active' : ''}
                   %ul{:class => (@section == 'functions') ? 'expanded' : ''}
                     - all_groups.each do |group|
-                      %li= function_nav_link group.name, group.functions.length
+                      %li= function_nav_link group.name, group.size
                 %li
                   = link_to "Types", "#", {:class => (@section == 'types') ? 'active' : ''}
                 %li
