--- a/app/assets/stylesheets/lists.css.scss
+++ b/app/assets/stylesheets/lists.css.scss
@@ -202,6 +202,7 @@ ul.stackoverflow {
 
 table.arguments {
   td {
+    vertical-align: top;
     padding-right: 20px;
     &.parameter {
       color: $fixed-width-font-color;
