tweaks to api argument table layout

--- a/app/assets/stylesheets/libgit2.css.scss
+++ b/app/assets/stylesheets/libgit2.css.scss
@@ -338,7 +338,7 @@ ul.library-group-functions {
   margin-top: -1em;
 }
 
-#usage-guide {
+#usage-guide, table.arguments {
   code {
     display: inline;
     background-color: #eee0b5;
