--- a/app/assets/stylesheets/lists.css.scss
+++ b/app/assets/stylesheets/lists.css.scss
@@ -201,9 +201,10 @@ ul.stackoverflow {
 }
 
 table.arguments {
+  width: 100%;
   td {
     vertical-align: top;
-    padding-right: 20px;
+    padding: 10px 20px 10px 0;
     &.parameter {
       color: $fixed-width-font-color;
       font-family: $fixed-width-font-family !important;
@@ -215,6 +216,17 @@ table.arguments {
       font-family: $fixed-width-font-family !important;
       line-height: $fixed-width-line-height;
     }
+    &.description {
+      width: 300px;
+      p {
+        font-size: 12px;
+        line-height: 1.6;
+        margin-bottom: 0;
+      }
+    }
+  }
+  tr + tr > td {
+    border-top: solid 1px lighten($base-border-color, 10%);
   }
 }
 
