adjust amazon affiliate links
The Pro Git links to Amazon use Scott's personal affiliate
id, which puts Git the non-profit project in a murky area.
This site is not owned or managed by the Software Freedom
Conservancy's member project Git, but it's de facto status
as the official site makes things awkward. And anyway, it
would be nice to donate the affiliate revenue to the
project.

This patch replaces all of the affiliated Pro Git links with
ones that mention the Git/SFC affiliate id.

--- a/app/views/site/index.html.haml
+++ b/app/views/site/index.html.haml
@@ -35,7 +35,7 @@
         <strong><a href="/book">Pro Git</a></strong> 
         by Scott Chacon is available to 
         <a href="/book">read online for free</a>. 
-        Dead tree versions are available on <a href="http://www.amazon.com/gp/product/1430218339?ie=UTF8&tag=prgi-20&linkCode=as2&camp=1789&creative=390957&creativeASIN=1430218339">Amazon.com</a>.
+        Dead tree versions are available on <a href="http://www.amazon.com/gp/product/1430218339?ie=UTF8&camp=1789&creative=9325&creativeASIN=1430218339&linkCode=as2&tag=git-sfconservancy-20">Amazon.com</a>.
 
   %section#front-downloads
     = partial 'shared/monitor'
