--- a/app/views/about/index.html.haml
+++ b/app/views/about/index.html.haml
@@ -1,5 +1,5 @@
 - @section = "about"
-- @page_title = "Git - About"
+- @page_title = "Git - Hakkında"
 
 - content_for :sidebar do
   = render 'shared/book'
