Anasayfada kısmi tercüme yapıldı

--- a/app/views/about/index.html.haml
+++ b/app/views/about/index.html.haml
@@ -9,39 +9,39 @@
 
   %ol#about-nav
     %li
-      <a href="#branching-and-merging" class="current three-line" id="nav-branching-and-merging" data-section-id="branching-and-merging">Branching and Merging</a>
+      <a href="#branching-and-merging" class="current three-line" id="nav-branching-and-merging" data-section-id="branching-and-merging">Branch ve Merge İşlemleri</a>
     %li
-      <a href="#small-and-fast" class="two-line" id="nav-small-and-fast" data-section-id="small-and-fast">Small and Fast</a>
+      <a href="#small-and-fast" class="two-line" id="nav-small-and-fast" data-section-id="small-and-fast">Küçük ve Hızlı</a>
     %li
-      <a href="#distributed" class="one-line" id="nav-distributed" data-section-id="distributed">Distributed</a>
+      <a href="#distributed" class="one-line" id="nav-distributed" data-section-id="distributed">Dağıtık</a>
     %li
-      <a href="#info-assurance" class="two-line" id="nav-info-assurance" data-section-id="info-assurance">Data Assurance</a>
+      <a href="#info-assurance" class="two-line" id="nav-info-assurance" data-section-id="info-assurance">Veri Güvencesi</a>
     %li
-      <a href="#staging-area" class="two-line" id="nav-staging-area" data-section-id="staging-area">Staging Area</a>
+      <a href="#staging-area" class="two-line" id="nav-staging-area" data-section-id="staging-area">Staging Alanı</a>
     %li
-      <a href="#free-and-open-source" class="three-line" id="nav-free-and-open-source" data-section-id="free-and-open-source">Free and Open Source</a>
+      <a href="#free-and-open-source" class="three-line" id="nav-free-and-open-source" data-section-id="free-and-open-source">Ücretsiz ve Açık Kaynak</a>
 
   %section.about#branching-and-merging.current
     %h2 Branching and Merging
 
     %p
-      The Git feature that really makes it stand apart from nearly every other SCM out there is its branching model.
+      Git'i diğer kaynak kod yönetim sistemlerinden gerçekten farklı kılan özellik onun dallanma modelidir.
 
     %p
-      Git allows and encourages you to have multiple local branches that can be entirely independent of each other. The creation, merging, and deletion of those lines of development takes seconds.
+      Git size birbirinden tamamen bağımsız dallara sahip olma imkanı sunar. Bu dalları saniyeler içerisinde yaratabilir, silebilir ve merge edebilirsiniz.
 
     %p
-      This means that you can do things like:
+     Şuna benzer şeyler yapabilirsiniz:
 
     %ul.bullets
       %li
-        <strong>Frictionless Context Switching</strong>. Create a branch to try out an idea, commit a few times, switch back to where you branched from, apply a patch, switch back to where you are experimenting, and merge it in.
+        <strong>Frictionless Context Switching</strong>. Bir fikri denemek için bir branch yaratırsınız, birkaç commit yaparsınız, dal oluşturduğunuz yere geri dönebilirsiniz, yama kabul edersiniz, deneme yaptığınız yere geçiş yaparsınız ve yaptığınız şeyleri merge edersiniz.
       %li
-        <strong>Role-Based Codelines</strong>. Have a branch that always contains only what goes to production, another that you merge work into for testing, and several smaller ones for day to day work.
+        <strong>Role-Based Codelines</strong>. Bir dalı direk üretim için kullanabilirsiniz, diğer dalı denemeleriniz için kullanabilirsiniz ve birçok farklı amaçla dal kullanabilirsiniz.
       %li
-        <strong>Feature Based Workflow</strong>. Create new branches for each new feature you're working on so you can seamlessly switch back and forth between them, then delete each branch when that feature gets merged into your main line.
+        <strong>Feature Based Workflow</strong>. Üzerinde çalıştığınız bir geliştirme için yeni bir dal yaratabilir,  var olan dallar arasında geçişler yapabilir, dalları merge ettikten sonra ihtiyacınız kalmayan dalları silebilirsiniz.
       %li
-        <strong>Disposable Experimentation</strong>. Create a branch to experiment in, realize it's not going to work, and just delete it - abandoning the work—with nobody else ever seeing it (even if you've pushed other branches in the meantime).
+        <strong>Disposable Experimentation</strong>. Bir şey denemek istiyorsanız hemen bir dal yaratın denediğiniz şey istediğiniz gibi olmamışsa yapmanız gereken tek şey bu dalı silmek. - Kimseye çaktırmadan istediğiniz gibi deneme yapma şansına sahip olursunuz.
 
     %p.center
       <img src="/images/about/branches.png" alt="Branches" />
