grammar fix: "it's" --> "its"

--- a/app/views/blog/progit/2011-07-11-reset.html
+++ b/app/views/blog/progit/2011-07-11-reset.html
@@ -31,7 +31,7 @@ data structure. (Some Git developers will get a bit mad at me here, because ther
 are a few cases where the Index doesn't exactly act like a tree, but for our purposes
 it is easier - forgive me).</p>
 
-<p>Git as a system manages and manipulates three trees in it's
+<p>Git as a system manages and manipulates three trees in its
 normal operation. Each of these is covered in the book, but let's review them.</p>
 
 
