design tweaks for Try Git masthead promo

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -80,11 +80,11 @@ aside {
       margin-bottom: 1.2em;
     }
     .promo {
-      background: #d8d7cf;
-      display: inline-block;
-      margin-top: -.5em;
-      padding: 4px 8px 4px 4px;
-      width: auto;
+      font-weight: bold;
+      img {
+        position: relative;
+        top: -6px;
+      }
     }
     img.illustration {
       position: absolute;
