retinaizing overlooked images

--- a/app/assets/stylesheets/lists.css.scss
+++ b/app/assets/stylesheets/lists.css.scss
@@ -110,13 +110,13 @@ ul.related-material {
     padding-left: 25px;
     min-height: 17px;
     &.reference {
-      background: transparent url(/images/icons/document-sm.png) 3px 0 no-repeat;
+      @include background-image-2x(/images/icons/document-sm, 12px, 17px, 3px 0);
     }
     &.book {
-      background: transparent url(/images/icons/book-sm.png) 0 0 no-repeat;
+      @include background-image-2x(/images/icons/book-sm, 17px, 17px);
     }
     &.video {
-      background: transparent url(/images/icons/film-sm.png) 2px 0 no-repeat;
+      @include background-image-2x(/images/icons/film-sm, 17px, 17px, 2px 0);
     }
   }
 }
