--- a/app/views/about/index.html.haml
+++ b/app/views/about/index.html.haml
@@ -218,7 +218,7 @@
       checksum when checked back out. It's impossible to get anything out of Git
       other than the <strong>exact bits you put in</strong>.
 
-    %img{:src => "/images/assurance.png"}
+    %img{:src => "/images/assurance@2x.png", :width => "628", :height => "522"}
 
     %p
       It is also impossible to change any file, date, commit message, or any other
