--- a/app/views/site/404.html.haml
+++ b/app/views/site/404.html.haml
@@ -1,5 +1,5 @@
 %p
-  <img src="/images/404.png" alt="404" />
+  <img src="/images/404@2x.png" alt="404" width="456" height="149" />
 
 %h1 That page doesn't exist.
 
