--- a/app/views/site/500.html.haml
+++ b/app/views/site/500.html.haml
@@ -1,5 +1,5 @@
 %p
-  <img src="/images/500.png" alt="500" />
+  <img src="/images/500@2x.png" alt="500" width="456" height="149" />
 
 %h1 Internal server error
 
