Update O'Reilly Git book to 2nd edition

--- a/app/views/doc/ext.html.erb
+++ b/app/views/doc/ext.html.erb
@@ -97,9 +97,9 @@
       <ul class='books-list'>
         <li>
           <a href="http://www.amazon.com/Version-Control-Git-collaborative-development/dp/0596520123"><img src="/images/books/version-control-with-git@2x.jpg" width="107" height="140" /></a>
-          <h4><a href="http://www.amazon.com/Version-Control-Git-collaborative-development/dp/0596520123">Version Control with Git</a></h4>
+          <h4><a href="http://www.amazon.com/Version-Control-Git-collaborative-development/dp/1449316387">Version Control with Git, 2nd ed.</a></h4>
           <p class='description'>
-            By Jon Loeliger
+            By Jon Loeliger &amp; Matthew McCullough
           </p>
         </li>
         <li>
