--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>git-scm.com</title>
+  <title><%=@page_title.present? ? @page_title : "Git" %></title>
   <%= stylesheet_link_tag    "git-scm", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
