added chapters dropdown to book section, fixes #174

--- a/app/assets/stylesheets/book.css.scss
+++ b/app/assets/stylesheets/book.css.scss
@@ -163,3 +163,27 @@ ol.book-toc {
   color: #777;
   font-size: 0.8em;
 }
+
+#book-chapters {
+  @extend .section-nav-container;
+  #chapters-dropdown {
+    padding: 12px;
+    top: 30px;
+  }
+  ol {
+    margin: 0;
+    li {
+      line-height: $base-line-height * .8;
+      h2 {
+        font-size: 14px;
+        margin-top: 0;
+      }
+      ol {
+        margin-left: 0;
+        a {
+          font-weight: normal;
+        }
+      }
+    }
+  }
+}
