--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -213,6 +213,45 @@ p.center {
   }
 }
 
+.section-nav-container {
+  @extend .unstyled;
+  position: relative;
+  background-color: #ebe9e1;
+  background-color: rgba(223, 221, 213, .33);
+  @include border-radius(3px);
+  padding: 8px 12px 6px 12px;
+  margin-bottom: 10px;
+  font-size: 13px;
+  font-weight: bold;
+  .light {
+    font-weight: normal;
+  }
+  a {
+    font-weight: bold;
+    position: relative;
+  }
+  .dropdown-panel {
+    top: 33px;
+    .three-column {
+      @include clearfix;
+      .column-left {
+        width: 31%;
+        float: left;
+        padding-right: 3%
+      }
+      .column-middle {
+        width: 31%;
+        float: left;
+        padding-right: 3%
+      }
+      .column-right {
+        width: 31%;
+        float: left;
+      }
+    }
+  }
+}
+
 // Dropdowns
 a.dropdown-trigger {
   padding: 4px 5px;
