--- a/app/assets/stylesheets/reference.css.scss
+++ b/app/assets/stylesheets/reference.css.scss
@@ -54,21 +54,8 @@ h3.plumbing {
 }
 
 #reference-version {
-  @extend .unstyled;
-  position: relative;
-  background-color: #ebe9e1;
-  background-color: rgba(223, 221, 213, .33);
-  @include border-radius(3px);
-  padding: 8px 12px 6px 12px;
-  margin-bottom: 10px;
-  font-size: 13px;
-  font-weight: bold;
-  .light {
-    font-weight: normal;
-  }
+  @extend .section-nav-container;
   a {
-    font-weight: bold;
-    position: relative;
     top: -5px;
     &#reference-versions-trigger {
       float: left;
@@ -77,9 +64,6 @@ h3.plumbing {
     &#reference-topics-trigger {
       float: right;
     }
-  }
-  .dropdown-panel {
-    top: 33px;
   }
 }
 
@@ -145,23 +129,6 @@ h3.plumbing {
   a {
     font-weight: normal;
     padding: 0;
-  }
-  .three-column {
-    @include clearfix;
-    .column-left {
-      width: 31%;
-      float: left;
-      padding-right: 3%
-    }
-    .column-middle {
-      width: 31%;
-      float: left;
-      padding-right: 3%
-    }
-    .column-right {
-      width: 31%;
-      float: left;
-    }
   }
 }
 
