--- a/app/views/books/section.html.erb
+++ b/app/views/books/section.html.erb
@@ -7,6 +7,10 @@
   <%= render 'shared/related' %>
 <% end %>
 
+<div id='book-chapters'>
+  <%= render 'chapters' %>
+</div>
+
 <div id='main' class="book">
   <% if !@content.title.empty? %>
     <h1><%= @content.cs_number %> <%=raw @content.chapter.title %> - <%=raw @content.title %></h1>
